<resources>
    <string name="app_name">MovieDataBase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_poster_transition_name">posterTransitionName</string>
    <string name="no_movie_found_error">No movies found</string>
    <string name="no_movie_detail_found_error">No movie detail found</string>

    <!-- The content description of the movie poster image, backdrop image, cast images and play image -->
    <string name="backdrop_content_description">Backdrop image</string>
    <string name="play_content_description">Trailer play button</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="star_content_description">Star image</string>
    <string name="person_content_description">Person image</string>
    <string name="thumbnail_content_description">Movie poster image thumbnail</string>

    <!-- String for the movie details -->
    <string name="ten">/10</string>
    <string name="vote_average">Avg rating</string>
    <string name="release_date">Release Date</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="status">Status</string>
    <string name="synopsis">Synopsis</string>
    <string name="details">Details</string>
    <string name="cast_and_crew">Cast &amp; Crew</string>
    <string name="actors">Actors</string>
    <string name="director">Director</string>
    <string name="writers">Writers</string>
    <string name="original_title">Original Title</string>
    <string name="view_all">View All</string>
    <string name="title_activity_movie_main">MovieMain</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>