<?xml version="1.0" encoding="utf-8"?><!--https://medium.com/@loutry/guide-to-constraintlayout-407cd87bc013-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:title=" "
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_grey_dark">

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- 3:2 aspect ratio ImageView -->
                    <com.android.omdb.core.view.ThreeTwoImageView
                        android:id="@+id/iv_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/backdrop_content_description"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax" />

                    <!-- 3:2 aspect ratio ImageView for scrim gradient -->
                    <com.android.omdb.core.view.ThreeTwoImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@drawable/scrim_gradient" />

                    <!-- Play button image -->
                    <ImageView
                        android:id="@+id/iv_play_circle"
                        android:layout_width="@dimen/size_play_image"
                        android:layout_height="@dimen/size_play_image"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@drawable/play_circle"
                        android:contentDescription="@string/play_content_description"
                        android:visibility="invisible" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semi_bold"
                    android:paddingLeft="@dimen/padding_activity"
                    android:paddingTop="@dimen/padding_activity_small"
                    android:paddingRight="@dimen/padding_activity"
                    android:paddingBottom="@dimen/padding_activity_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toStartOf="@+id/fab"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame"
                    tools:text="movie title" />

                <TextView
                    android:id="@+id/tv_release_year"
                    style="@style/BasicTextStyle"
                    android:paddingLeft="@dimen/padding_activity"
                    android:paddingRight="@dimen/padding_activity"
                    android:textColor="@color/blue_grey_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                    tools:text="2018" />

                <View
                    android:id="@+id/vw_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/blue_grey_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release_year" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.63" />

                <TextView
                    android:id="@+id/tv_genre"
                    style="@style/BasicTextStyle"
                    android:layout_marginStart="@dimen/padding_activity"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    android:layout_marginBottom="@dimen/padding_activity"
                    app:layout_constrainedWidth="true"
                    android:scrollHorizontally="false"
                    android:textColor="@color/blue_grey_200_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/tv_runtime"
                    app:layout_constraintTop_toBottomOf="@+id/vw_divider"
                    tools:text="Action, Adventure, Animation, Family" />

                <TextView
                    android:id="@+id/tv_runtime"
                    style="@style/BasicTextStyle"
                    android:layout_marginStart="@dimen/padding_activity"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/padding_activity"
                    android:layout_marginBottom="@dimen/padding_activity"
                    android:textColor="@color/blue_grey_light"
                    app:layout_constraintRight_toLeftOf="@+id/tv_rating"
                    app:layout_constraintTop_toBottomOf="@+id/vw_divider"
                    tools:text="122 min" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/BasicTextStyle"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/padding_activity"
                    android:drawableStart="@drawable/star"
                    android:drawablePadding="@dimen/padding_activity_small"
                    android:textColor="@color/blue_grey_200_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vw_divider"
                    tools:text="7.2" />

                <!-- ProgressBar to show the user content is loading -->
                <ProgressBar
                    android:id="@+id/pb_detail_loading_indicator"
                    android:layout_width="@dimen/size_detail_loading_indicator"
                    android:layout_height="@dimen/size_detail_loading_indicator"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_activity"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vw_divider" />

                <!-- Favorite button to mark a movie as a Favorite or UnFavorite -->
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_activity"
                    android:padding="0dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/play_circle"
                    app:backgroundTint="@color/color_fab"
                    app:borderWidth="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/frame"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame"
                    app:useCompatPadding="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_grey_dark"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.detail.DetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey_dark"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="@dimen/padding_activity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_overview_label"
                        style="@style/OverviewLabelStyle"
                        android:layout_marginBottom="@dimen/margin_activity"
                        android:text="@string/synopsis" />

                    <TextView
                        android:id="@+id/tv_overview"
                        style="@style/BasicTextStyle"
                        android:textColor="@android:color/white"
                        tools:text="over view" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="@dimen/padding_activity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_score"
                        style="@style/BasicTextStyle"
                        android:drawableTop="@drawable/ic_score"
                        android:drawablePadding="@dimen/padding_activity_small"
                        android:paddingBottom="@dimen/padding_vote_average_label"
                        android:text="@string/popularity_label"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toStartOf="@+id/tv_vote"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="6.8" />

                    <TextView
                        android:id="@+id/tv_vote"
                        style="@style/BasicTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/person"
                        android:drawablePadding="@dimen/padding_activity_small"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toStartOf="@+id/tv_popularity"
                        app:layout_constraintStart_toEndOf="@id/tv_score"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="9,314" />

                    <TextView
                        android:id="@+id/tv_popularity"
                        style="@style/BasicTextStyle"
                        android:drawableTop="@drawable/ic_focus"
                        android:drawablePadding="@dimen/padding_activity_small"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_vote"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="N/A" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                app:contentPadding="@dimen/padding_activity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_cast_crew_label"
                        style="@style/OverviewLabelStyle"
                        android:text="@string/cast_and_crew"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_director_label"
                        style="@style/CastTextLabelStyle"
                        android:text="@string/director"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_cast_crew_label" />

                    <TextView
                        android:id="@+id/tv_director"
                        style="@style/BasicTextStyle"
                        android:layout_marginStart="@dimen/margin_director"
                        android:layout_marginLeft="@dimen/margin_director"
                        android:layout_marginTop="@dimen/margin_activity"
                        android:textColor="@android:color/white"
                        app:layout_constraintStart_toEndOf="@+id/tv_writer_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_cast_crew_label"
                        tools:text="director name" />

                    <TextView
                        android:id="@+id/tv_writer_label"
                        style="@style/CastTextLabelStyle"
                        android:text="@string/writers"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_director" />

                    <TextView
                        android:id="@+id/tv_writer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_cast"
                        android:layout_marginLeft="@dimen/margin_cast"
                        android:ellipsize="end"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:maxLines="3"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/tv_writer_label"
                        app:layout_constraintTop_toTopOf="@+id/tv_writer_label"
                        tools:text="Bob Kane, Jerry Siegel" />


                    <TextView
                        android:id="@+id/tv_actor_label"
                        style="@style/CastTextLabelStyle"
                        android:text="@string/actors"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_writer" />

                    <TextView
                        android:id="@+id/tv_actor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_cast"
                        android:layout_marginLeft="@dimen/margin_cast"
                        android:ellipsize="end"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:maxLines="3"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/tv_actor_label"
                        app:layout_constraintTop_toTopOf="@+id/tv_actor_label"
                        tools:text="Craig T. Nelson, Holly Hunter, Sara Vowell" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>