<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".features.movie.presentation.moviedetail.MovieDetailFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue_grey_dark">

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- 3:2 aspect ratio ImageView -->
                    <com.android.omdb.core.view.ThreeTwoImageView
                        android:id="@+id/iv_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/backdrop_content_description"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax" />

                    <!-- 3:2 aspect ratio ImageView for scrim gradient -->
                    <com.android.omdb.core.view.ThreeTwoImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@drawable/scrim_gradient" />

                    <!-- Play button image -->
                    <ImageView
                        android:id="@+id/iv_play_circle"
                        android:layout_width="@dimen/size_play_image"
                        android:layout_height="@dimen/size_play_image"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@drawable/play_circle"
                        android:contentDescription="@string/play_content_description"
                        android:visibility="invisible" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semi_bold"
                    android:paddingLeft="@dimen/padding_activity"
                    android:paddingTop="@dimen/padding_activity_small"
                    android:paddingRight="@dimen/padding_activity"
                    android:paddingBottom="@dimen/padding_activity_small"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toStartOf="@+id/fab"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame"
                    tools:text="movie title" />

                <TextView
                    android:id="@+id/tv_runtime"
                    style="@style/BasicTextStyle"
                    android:paddingLeft="@dimen/padding_activity"
                    android:paddingRight="@dimen/padding_activity"
                    android:textColor="@color/blue_grey_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                    tools:text="122 min" />

                <TextView
                    android:id="@+id/tv_release_year"
                    style="@style/BasicTextStyle"
                    android:textColor="@color/blue_grey_light"
                    app:layout_constraintLeft_toRightOf="@+id/tv_runtime"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                    tools:text="2018" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_runtime">

                    <TextView
                        android:id="@+id/tv_genre"
                        style="@style/BasicTextStyle"
                        android:paddingLeft="@dimen/padding_activity"
                        android:paddingRight="@dimen/padding_activity"
                        android:paddingBottom="@dimen/padding_activity_small"
                        android:textColor="@color/blue_grey_200_light"
                        tools:text="Action, Adventure, Animation, Family" />

                    <!-- ProgressBar to show the user content is loading -->
                    <ProgressBar
                        android:id="@+id/pb_detail_loading_indicator"
                        android:layout_width="@dimen/size_detail_loading_indicator"
                        android:layout_height="@dimen/size_detail_loading_indicator"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>

                <!-- Favorite button to mark a movie as a Favorite or UnFavorite -->
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_activity"
                    app:backgroundTint="@color/color_fab"
                    app:layout_constraintBottom_toBottomOf="@+id/frame"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.moviedetail.MovieDetailScrollingActivity"
        tools:showIn="@layout/activity_movie_activtiy">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Year: --"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_director"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Director: --"
                        android:textColor="#000000"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/text_writer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Writer: --"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Plot: --"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_imd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Internet Movie Database: --"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_metascore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Metascore: --"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_imdb_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="IMBD Rating: --"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progress_movie_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_movies_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/no_movie_detail_found_error" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>